Make MineBoxCommand compatible with older Java source level